--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -25,6 +25,14 @@ layout: default
         <h1> {{ site.header_text | default: "Change <code>header_text</code> in <code>_config.yml</code>"}} </h1>
     </div>
 
-    {{ content }}
+    <section class="post-content">
+      {% if page.bootstrap %}
+      <div class="bootstrap-iso">
+      {% endif %}
+    	{{ content }}
+      {% if page.bootstrap %}
+      </div>
+      {% endif %}
+      </section>
 
 </div>
