--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,3 +2,6 @@
 ---
 
 @import "type-on-strap";
+
+#gridid img { margin: 16px 22px 6px 0; border-radius:10%; box-shadow: 2px 2px 5px #888888 }
+#gridid .row { margin-bottom: 24px; }
