--- a/_layouts/contact.liquid
+++ b/_layouts/contact.liquid
@@ -17,9 +17,11 @@ layout: default
     </div>
   </header>
 
+  <section class="post-content">
   <div id="gridid" class="col-sm-12">
     {{ content }}
   </div>
+  </section>
 
 
   <!-- Tag list for portfolio -->
