--- a/_layouts/tags.liquid
+++ b/_layouts/tags.liquid
@@ -14,7 +14,7 @@ layout: page
     {% endfor %}
 
     <!-- cycles through portfolio collection to get tags -->
-    {% assign portfolio = site.portfolio | map: 'tags' | join: ',' | split: ',' | uniq %}
+    {% assign portfolio = site.projects | map: 'tags' | join: ',' | split: ',' | uniq %}
     {% for tag in portfolio %}
     {% assign portfolio_tags = tag | join: '|' | append: '|' %}
     {% assign rawtags = rawtags | append: portfolio_tags %}
